--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   latlong2: ^0.9.0
   responsive_framework: ^0.2.0
   rxdart: ^0.27.7
+  google_maps_flutter: ^2.1.0
 
   
   flutter:
