--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   get: ^4.6.5
-  http: null
+  http: ^1.2.2
   intl: ^0.19.0
   l: ^4.0.2
   latlong2: ^0.9.0
-  responsive_framework: ^0.2.0
   rxdart: ^0.27.7
-  google_maps_flutter: ^2.1.0
+  flutter_map: ^6.1.0
 
   
   flutter:
