--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,38 +56,31 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  assets:
+
+    - assets/
+    - assets/fonts/
 
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: MuseoSans-100
+      fonts:
+        - asset: assets/fonts/MuseoSans-100.otf
+          weight: 200
+    - family: MuseoSans-300
+      fonts:
+        - asset: assets/fonts/MuseoSans-300.otf
+          weight: 300
+    - family: MuseoSans-500
+      fonts:
+        - asset: assets/fonts/MuseoSans-500.otf
+          weight: 400
+    - family: MuseoSans-700
+      fonts:
+        - asset: assets/fonts/MuseoSans-700.otf
+          weight: 600
+    - family: MuseoSans-900
+      fonts:
+        - asset: assets/fonts/MuseoSans-900.ttf
+          weight: 600
